@@ -516,12 +516,13 @@ struct mne *mp;
 		}
 		if ((t1 == S_R16) && (v1 == HL))
 		{
-		  if ((t2 == S_IDIX) || (t2 == S_IDHL) || (t2 == S_IDIY))
+		  if ((t2 == S_IDIX) || (t2 == S_IDIY) ||
+		      (t2 == S_IDHL) || (t2 == S_IDHL_OFFSET))
 		  {
 		    /* ljm - added rabbit instruction LD HL,n(IX|HL|IY) */
 		    if (t2 == S_IDIY)
 		      outab( 0xFD ); 
-		    else if (t2 == S_IDHL)
+		    else if ((t2 == S_IDHL) || (t2 == S_IDHL_OFFSET))
 		      /* ljm - added rabbit instruction LD HL,n(IY)
 		       * normally 0xFD generated by "gixiy(v1)", but
 		       * 0xDD results in n(HL) instead of n(IX)
@@ -546,10 +547,12 @@ struct mne *mp;
 		}
 		if ((t2 == S_R16) && (v2 == HL)) /* ld n(IX|IY|HL), HL */
 		{
-		  if ((t1 == S_IDIY) || (t1 == S_IDHL))
+		  if ((t1 == S_IDIY) || (t1 == S_IDHL) ||
+		      (t1 == S_IDHL_OFFSET))
 		    outab( ((t1==S_IDIY) ? 0xFD : 0xDD) );
 		  
-		  if ((t1 == S_IDIY) || (t1 == S_IDHL) || (t1 == S_IDIX)) {
+		  if ((t1 == S_IDIY) || (t1 == S_IDIX) ||
+		      (t1 == S_IDHL) || (t1 == S_IDHL_OFFSET)) {
 		    outab( 0xF4 );
 		    outrb( &e2 );
 		    break;
